--- a/alfonsina/contacto.html
+++ b/alfonsina/contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -197,11 +197,11 @@
             <!-- Redes -->
             <div class="col-md-4 col-10">
                 <h5>SEGUINOS</h5>
-                <div>
-                    <a href="https://facebook.com" target="_blank"><img src="../img/facebook.svg" alt="Facebook" height="50" width="50"></a>
-                    <a href="https://instagram.com" target="_blank"><img src="../img/instagram.svg" alt="Instagram" height="50" width="50"></a>
-                    <a href="https://twitter.com" target="_blank"><img src="../img/twitter.svg" alt="Twitter" height="50" width="50"></a>
-                </div>
+                <ul>
+                    <li><a href="https://facebook.com" target="_blank"><img src="../img/facebook.svg" alt="Facebook" height="50" width="50"></a></li>
+                    <li><a href="https://instagram.com" target="_blank"><img src="../img/instagram.svg" alt="Instagram" height="50" width="50"></a></li>
+                    <li><a href="https://twitter.com" target="_blank"><img src="../img/twitter.svg" alt="Twitter" height="50" width="50"></a></li>
+                </ul>
             </div>
             <!-- Mapa -->
             <iframe class="col-md-4 col-8" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50673.34340128342!2d-61.95491476366218!3d-37.45873945024496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95eb72d8e8d8050f%3A0x7662e3714a79bafb!2sCoronel%20Suarez%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1680581056690!5m2!1ses!2sar" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
