--- a/alfonsina/productos.html
+++ b/alfonsina/productos.html
@@ -74,7 +74,7 @@
                             <dt><button>$2899</button></dt>
                             <dt><input type="number"></dt>
                         </dl>
-                        <button class="buttonResultado">Resultado input*button</button>
+                        <button class="buttonResultado">Resultado precio</button>
                         <button class="buttonAgregar">Agregar al carrito</button>
                     </div>
                     
@@ -86,7 +86,7 @@
                             <dt><button>$999</button></dt>
                             <dt><input type="number"></dt>
                         </dl>
-                        <button class="buttonResultado">Resultado input*button</button>
+                        <button class="buttonResultado">Resultado precio</button>
                         <button class="buttonAgregar">Agregar al carrito</button>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                             <dt><button>$1199</button></dt>
                             <dt><input type="number"></dt>
                         </dl>
-                        <button class="buttonResultado">Resultado input*button</button>
+                        <button class="buttonResultado">Resultado precio</button>
                         <button class="buttonAgregar">Agregar al carrito</button>
                     </div>
 
@@ -113,7 +113,7 @@
                             <dt><button>$1199</button></dt>
                             <dt><input type="number"></dt>
                         </dl>
-                        <button class="buttonResultado">Resultado input*button</button>
+                        <button class="buttonResultado">Resultado precio</button>
                         <button class="buttonAgregar">Agregar al carrito</button>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                             <dt><button>$4999</button></dt>
                             <dt><input type="number"></dt>
                         </dl>
-                        <button class="buttonResultado">Resultado input*button</button>
+                        <button class="buttonResultado">Resultado precio</button>
                         <button class="buttonAgregar">Agregar al carrito</button>
                     </div>
 
@@ -140,7 +140,7 @@
                             <dt><button>$1199</button></dt>
                             <dt><input type="number"></dt>
                         </dl>
-                        <button class="buttonResultado">Resultado input*button</button>
+                        <button class="buttonResultado">Resultado precio</button>
                         <button class="buttonAgregar">Agregar al carrito</button>
                     </div>
                 </div>
