--- a/alfonsina/ingresar.html
+++ b/alfonsina/ingresar.html
@@ -67,10 +67,10 @@
                 <div class="row justify-content-evenly">    
                     <!-- Formulario -->
                     <form class="col-lg-5 col-8">
-                        <label for="email">Correo Electronico</label>
-                        <input name="email" type="email">
-                        <label for="contraseña">Contraseña</label>
-                        <input name="contraseña" type="password">
+                        <label for="">Correo Electronico</label>
+                        <input name="" type="email" required>
+                        <label for="">Contraseña</label>
+                        <input name="" type="password" required>
                         <button>Ingresar</button>
                     </form>
                     <!-- Crear cuenta -->
